<resources>
    <string name="app_name">Parallax</string>
    <string name="select_image">Select Image</string>
    <string name="chosen_image">Chosen Image</string>
    <string name="select_layer_top">Select Top Layer</string>
    <string name="select_layer_mid">Select Middle Layer</string>
    <string name="select_layer_bot">Select Bottom Layer</string>
    <string name="select_layer_image">Select Layer Image</string>
    <string name="delete_layer_image">Delete Layer Image</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="layer_selector_btn">Layer Selector Btn</string>
    <string name="velocity">Velocity</string>
    <string name="offset">Offset</string>
    <string name="zero">0</string>
    <string name="imageTypeStatic">Static</string>
    <string name="imageTypeInteractiveGif">Interactive Gif</string>
    <string name="imageTypeGif">Gif</string>
</resources>