<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <com.example.parallax.ParallaxWallpaperView
        android:id="@+id/ivCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transparent"
        tools:layout_editor_absoluteX="-137dp"
        tools:layout_editor_absoluteY="33dp" />

    <LinearLayout
        android:id="@+id/layoutIvSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ivSmallTop"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/select_layer_top" />

        <ImageButton
            android:id="@+id/ivSmallMid"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/select_layer_mid"  />

        <ImageButton
            android:id="@+id/ivSmallBot"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/select_layer_bot" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLayerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutIvSmall">

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/select_image"
            app:icon="@android:drawable/ic_menu_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutIvSmall" />

        <Button
            android:id="@+id/btnDeleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/delete_layer_image"
            app:icon="@android:drawable/ic_menu_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutIvSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLayerConfigs"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLayerImage">

        <RadioGroup
            android:id="@+id/rgImageTypeSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rbStatic"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbStatic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imageTypeStatic" />

            <RadioButton
                android:id="@+id/rbIntGif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imageTypeInteractiveGif" />

            <RadioButton
                android:id="@+id/rbGif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imageTypeGif" />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEditOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black_transparent_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llLayerImage" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnClearAllLayers"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:text="clear all layers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSetWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="set background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbPage"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="264dp"
        android:layout_height="26dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="88dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>